# inceptor

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Gemfile  LICENSE  Makefile  README.md  _config.yml  actions.sh  cli.py  coverage.xml  inceptor.md  inceptor.py  inceptor2.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-test.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: gh-pages.yml
docs/: features.md  index.md  installation.md  quick-start.md  src.md
docs/overrides/: main.html
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/assets/javascripts/: custom.js  termynal.js
site/assets/stylesheets/: custom.css  termynal.css
site/features/: index.html
site/installation/: index.html
site/overrides/partials/: header.html
site/quick-start/: index.html
site/search/: search_index.json
site/src/: index.html
src/inceptor/: __init__.py  cli.py  core.py  inceptor.py  prompts.py  utils.py
src/inceptor/core/: __init__.py  context_extractor.py  dream_architect.py  enums.py  models.py  ollama_client.py  prompt_templates.py  utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_core.py
